--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section id="gallary" class="grid-one  section white-bg">
         <div class="grid-content main-content">
             <h2 class="grid-heading">Galeria</h2>
-            <p class="grid-description">Incluindo personagens vindoSS dos filmes</p>
+            <p class="grid-description">Incluindo personagens vindo dos filmes</p>
             <div class="grid other-padding">
                 <div class="gallary-img">
                     <div style="width:100%;height:0;padding-bottom:57%;position:relative;"><iframe
