--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="grid-one" class="grid-one  section main-bg">
         <div class="grid-content main-content">
             <h2 class="grid-heading">elenco completo</h2>
-            <p class="grid-description">Incluindo personagens vindos dos filmes</p>
+            <p class="grid-description">Incluindo personagens vindo dos filmes</p>
             <div class="grid">
                 <article>
                     <h3>Entrevista</h3>
